[gd_scene load_steps=17 format=3 uid="uid://2yu7drphx7ur"]

[ext_resource type="Script" path="res://src/cards/card_base.gd" id="1_ohx6w"]
[ext_resource type="Theme" uid="uid://c3hfmpsb3fvhr" path="res://assets/game_theme.tres" id="1_w62ds"]
[ext_resource type="Texture2D" uid="uid://by5wpf5vbkrw1" path="res://assets/custom/Card.png" id="2_2dibt"]
[ext_resource type="Texture2D" uid="uid://bqjj7hkpne0ln" path="res://assets/custom/SelectTile.png" id="3_4ormi"]
[ext_resource type="FontFile" uid="uid://drlkmr7jve2ep" path="res://assets/m5x7.ttf" id="3_inew6"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="4_jm2oq"]
[ext_resource type="Texture2D" uid="uid://ykuefae3vde0" path="res://assets/custom/Energy.png" id="5_8u4qp"]
[ext_resource type="Texture2D" uid="uid://budddmtnr8xsu" path="res://assets/seed/cactus.png" id="6_ju4kb"]
[ext_resource type="Texture2D" uid="uid://b5gtwrgnirbxg" path="res://assets/custom/YellowMana.png" id="8_md8ou"]
[ext_resource type="Texture2D" uid="uid://bvk0lh8bp63in" path="res://assets/custom/Time.png" id="9_63ik7"]
[ext_resource type="Texture2D" uid="uid://b54p2v6xa8vgl" path="res://assets/custom/EnhanceChevron.png" id="9_odxue"]
[ext_resource type="Texture2D" uid="uid://dm53fkuh75jw" path="res://assets/custom/card_highlight.png" id="12_qqclk"]

[sub_resource type="Theme" id="Theme_xgb3r"]
default_font = ExtResource("3_inew6")

[sub_resource type="AtlasTexture" id="AtlasTexture_ek5de"]
atlas = ExtResource("6_ju4kb")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g65hf"]
atlas = ExtResource("9_odxue")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02cf5"]
atlas = ExtResource("9_odxue")
region = Rect2(0, 0, 16, 16)

[node name="CardBase" type="MarginContainer"]
texture_filter = 1
custom_minimum_size = Vector2(200, 280)
pivot_offset = Vector2(100, 140)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ohx6w")

[node name="CardBorder" type="Sprite2D" parent="."]
texture = ExtResource("2_2dibt")
centered = false

[node name="HBoxContainer" type="MarginContainer" parent="."]
texture_filter = 2
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
theme = ExtResource("1_w62ds")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource("Theme_xgb3r")

[node name="TopBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CardNameLabel" type="Label" parent="HBoxContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "CARD NAME"

[node name="CardCostLabel" type="Label" parent="HBoxContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 0
text = "1
"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/TopBar"]
layout_mode = 2
texture = ExtResource("5_8u4qp")
expand_mode = 2

[node name="ImageMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ImageCont" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/ImageMargin"]
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="CardIconCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont/CardIconCont"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("AtlasTexture_ek5de")
expand_mode = 5
stretch_mode = 4

[node name="SizeCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="SizeLabel" type="Label" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont/SizeCont"]
layout_mode = 2
theme = ExtResource("4_jm2oq")
text = "9"

[node name="SizeIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont/SizeCont"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_4ormi")

[node name="VBox" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Chev1" type="TextureRect" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont/VBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_g65hf")

[node name="Chev2" type="TextureRect" parent="HBoxContainer/VBoxContainer/ImageMargin/ImageCont/VBox"]
layout_mode = 2
texture = SubResource("AtlasTexture_02cf5")

[node name="DescriptionLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(184, 135)
layout_mode = 2
bbcode_enabled = true
text = "description"
scroll_active = false
autowrap_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer/BottomBar"]
visible = false
layout_mode = 2
text = "Type"

[node name="YieldTexture" type="TextureRect" parent="HBoxContainer/VBoxContainer/BottomBar"]
layout_mode = 2
texture = ExtResource("8_md8ou")
expand_mode = 3

[node name="YieldLabel" type="Label" parent="HBoxContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "3"

[node name="TimeLabel" type="Label" parent="HBoxContainer/VBoxContainer/BottomBar"]
layout_mode = 2
mouse_filter = 0
text = "/ 3"

[node name="TimeTexture" type="TextureRect" parent="HBoxContainer/VBoxContainer/BottomBar"]
layout_mode = 2
texture = ExtResource("9_63ik7")
expand_mode = 2

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("12_qqclk")
centered = false

[connection signal="gui_input" from="Focus" to="." method="_on_focus_gui_input"]
[connection signal="mouse_entered" from="Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_focus_mouse_exited"]
